tests/expectations/parser-statement/unreachable/postfix_fail.out
Error [EPAR0370005]: expected <eof> -- found ';'
    --> test_0:1:11
     |
   1 | let x = a;;
     |           ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ';'
    --> test_1:1:11
     |
   1 | let x = a.;
     |           ^
Error [EPAR0370005]: expected ; -- found ','
    --> test_2:1:10
     |
   1 | let x = a,;
     |          ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_3:1:11
     |
   1 | let x = a[;
     |           ^
Error [EPAR0370005]: expected ; -- found ']'
    --> test_4:1:10
     |
   1 | let x = a];
     |          ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ';'
    --> test_5:1:11
     |
   1 | let x = a{;
     |           ^
Error [EPAR0370005]: expected ; -- found '}'
    --> test_6:1:10
     |
   1 | let x = a};
     |          ^
Error [EPAR0370005]: expected ; -- found ')'
    --> test_7:1:10
     |
   1 | let x = a);
     |          ^
Error [EPAR0370005]: expected ; -- found ':'
    --> test_8:1:10
     |
   1 | let x = a:;
     |          ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_9:1:11
     |
   1 | let x = a?;
     |           ^
Error [EPAR0370005]: expected ; -- found '='
    --> test_10:1:10
     |
   1 | let x = a=;
     |          ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_11:1:12
     |
   1 | let x = a==;
     |            ^
Error [EPAR0370005]: expected ; -- found '!'
    --> test_12:1:10
     |
   1 | let x = a!;
     |          ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_13:1:12
     |
   1 | let x = a!=;
     |            ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_14:1:11
     |
   1 | let x = a>;
     |           ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_15:1:12
     |
   1 | let x = a>=;
     |            ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_16:1:11
     |
   1 | let x = a<;
     |           ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_17:1:12
     |
   1 | let x = a<=;
     |            ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_18:1:11
     |
   1 | let x = a>;
     |           ^
Error [EPAR0370005]: expected ; -- found '..'
    --> test_19:1:10
     |
   1 | let x = a..;
     |          ^^
